# icfpc2016

./: CLEAR.md  FORMAT.md  LICENSE  README.md  batch-submit-simples  download.sh  icfpc2016.cabal  loop.sh  submit-same-answers  submit_problem.sh  submit_sames.sh  submit_simple.sh  submit_solution.sh  submit_solution_sleep.sh  update_clearlist.sh
app/: batchSubmitSimples.hs  many.hs  moveRotSol.hs  submitSames.hs
khibino/: pkgs.list
publish-problem/responses/: 1470495600.json  1470499200.json  1470502800.json  1470506400.json  1470510000.json  1470513600.json  1470517200.json  1470520800.json  1470524400.json  1470528000.json  1470531600.json  1470535200.json  1470538800.json  1470542400.json  1470546000.json  1470549600.json  1470553200.json  1470556800.json  1470560400.json  1470564000.json  1470567600.json  1470571200.json  1470574800.json  1470578400.json  1470582000.json  1470585600.json  1470589200.json  1470592800.json  1470596400.json  1470600000.json  1470603600.json
pythagoras/: Primes.hs  findPythagoras.hs
responses/: 10.json  100.json  1000.json  1001.json  1004.json  1005.json  1006.json  1007.json  1008.json  101.json  1014.json  1018.json  1019.json  1020.json  1021.json  1022.json  1023.json  1024.json  1044.json  105.json  1067.json  1068.json  107.json  1071.json  1073.json  1074.json  1075.json  1076.json  1077.json  1079.json  1080.json  1082.json  1083.json  1085.json  1090.json  1091.json  1093.json  1094.json  1095.json  1096.json  (+1395 more)
src/: Command.hs  Edge.hs  File.hs  Move.hs  Point.hs  Polygon.hs  Problem.hs  ProblemDupes.hs  ProblemSubmit.hs  Rotate.hs  Segment.hs  Solution.hs  Valid.hs  Vertex.hs
src/REST/: File.hs  Response.hs
zakki/origami/: .gitignore  build.sbt  cli.txt  image-problem.sh  image-solution.sh
zakki/origami/project/: Build.scala  plugins.sbt
zakki/origami/src/main/scala/origami/: Problems.scala  SimpleApp.scala  Solvers.scala  Visualizer.scala
zakki/origami/src/main/scala/origami/math/: vmath.scala
zakki/origami/src/test/scala/origami/: SimpleTest.scala
