name:                icfpc2016
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/icfpc2016#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Point
  build-depends:       array >= 0.5.1.0
                     , base >= 4.7 && < 5
  default-language:    Haskell2010

executable icfpc2016-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       array >= 0.5.1.0
                     , base
                     , icfpc2016
  default-language:    Haskell2010

test-suite icfpc2016-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       array >= 0.5.1.0
                     , base
                     , icfpc2016
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/icfpc2016
