name:                icfpc2016
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/icfpc2016#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Vertex
                     , Segment
                     , Edge
                     , Polygon
                     , Problem
                     , Solution
                     , Valid
                     , Rotate
                     , Move
                     , ProblemSubmit
                     , ProblemDupes
                     , File
                     , Command

                     , REST.Response

  build-depends:       aeson
                     , array >= 0.5.1.0
                     , base >= 4.7 && < 5
                     , bytestring
                     , directory >= 1.2.2.0
                     , filepath >= 1.4.0.0
                     , process
                     , split
                     , fgl >= 5.5
  default-language:    Haskell2010
  ghc-options:       -Wall

executable icfpc2016-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       array >= 0.5.1.0
                     , base
                     , directory >= 1.2.2.0
                     , filepath >= 1.4.0.0
                     , icfpc2016
  default-language:    Haskell2010
  ghc-options:       -Wall

executable move-rot-sol
  hs-source-dirs:      app
  main-is:             moveRotSol.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base <5
                     , directory >= 1.2.2.0
                     , filepath >= 1.4.0.0
                     , icfpc2016
  default-language:    Haskell2010
  ghc-options:       -Wall

executable batch-submit-simples
  hs-source-dirs:      app
  main-is:             batchSubmitSimples.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base <5
                     , directory
                     , icfpc2016
  default-language:    Haskell2010
  ghc-options:       -Wall

executable submit-same-answers
  hs-source-dirs:      app
  main-is:             submitSames.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base <5
                     , directory
                     , icfpc2016
  default-language:    Haskell2010
  ghc-options:       -Wall

executable many-sames
  hs-source-dirs:      app
  main-is:             many.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base <5
                     , icfpc2016
  default-language:    Haskell2010
  ghc-options:       -Wall

executable find-pythagoras
  hs-source-dirs:      pythagoras
  main-is:             findPythagoras.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base <5
                     , icfpc2016
  default-language:    Haskell2010
  ghc-options:       -Wall

test-suite icfpc2016-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       array >= 0.5.1.0
                     , base
                     , directory >= 1.2.2.0
                     , filepath >= 1.4.0.0
                     , icfpc2016
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  ghc-options:       -Wall

source-repository head
  type:     git
  location: https://github.com/githubuser/icfpc2016
